--- a/tests/makefile
+++ b/tests/makefile
@@ -1,2 +1,2 @@
 metropolis: metropolis.cpp
-	g++ -O3 -Wall -Wpedantic metropolis.cpp -o metropolis
+	g++ -O3 -ffast-math -Wall -Wpedantic metropolis.cpp -o metropolis
