histogram_1D and unit testing

--- a/tests/makefile
+++ b/tests/makefile
@@ -1,2 +1,12 @@
-metropolis: metropolis.cpp
+SRC := ../src/metropolis.hpp ../src/rng.hpp ../src/histogram.hpp
+
+all: assert metropolis
+
+assert: %: %.cpp $(SRC)
+	g++ -g -Wall -Wpedantic assert.cpp -o assert && ./assert
+
+metropolis: %: %.cpp $(SRC)
 	g++ -O3 -ffast-math -Wall -Wpedantic metropolis.cpp -o metropolis && ./metropolis
+
+clean:
+	rm -I assert metropolis
