range-v3 in c_m computation

--- a/tests/makefile
+++ b/tests/makefile
@@ -1,17 +1,18 @@
-SRC := ../src/metropolis.hpp ../src/rng.hpp ../src/histogram.hpp ../src/synchrotron.hpp
-BIN := assert metropolis synchrotron
-FLAGS := -O3 -ffast-math -std=c++17 -Wall -Wpedantic 
+SRC    := ../src/metropolis.hpp ../src/rng.hpp ../src/histogram.hpp ../src/radiation.hpp
+BIN    := assert metropolis synchrotron_radiation
+FLAGS  := -std=c++17 -Wall -Wpedantic -I ../range-v3/include
+FLAGS3 := -O3 -ffast-math $(FLAGS)
 
 all: $(BIN)
 
 assert: %: %.cpp $(SRC)
-	g++ -g -Wall -Wpedantic $< -o $@ && ./$@
+	g++ -g $(FLAGS) $< -o $@ && ./$@
 
 metropolis: %: %.cpp $(SRC)
-	g++ $(FLAGS) $< -o $@ && ./$@
+	g++ $(FLAGS3) $< -o $@ && ./$@
 
-synchrotron: %: %.cpp $(SRC)
-	g++ $(FLAGS) $< -o $@ && ./$@
+synchrotron_radiation: %: %.cpp $(SRC)
+	g++ $(FLAGS3) $< -o $@ && ./$@
 
 clean:
 	rm -I $(BIN)
