new version of vacuum_refractive_index; tests passed

--- a/tests/makefile
+++ b/tests/makefile
@@ -1,7 +1,9 @@
 SRC    := ../src/metropolis.hpp ../src/rng.hpp ../src/histogram.hpp ../src/radiation.hpp ../src/proposal_density.hpp
 BIN    := assert metropolis synchrotron_radiation proposal_density #bks_synchrotron_radiation
-FLAGS  := -std=c++17 -fconcepts -Wall -Wpedantic -I ../range-v3/include
+FLAGS  := -std=c++17 -fconcepts -Wall -Wpedantic -fdiagnostics-color=always -I ../range-v3/include
 FLAGS3 := -O3 -ffast-math $(FLAGS)
+
+.PHONY: all clean
 
 all: $(BIN)
 
@@ -17,7 +19,7 @@ synchrotron_radiation: %: %.cpp $(SRC)
 proposal_density: %: %.cpp $(SRC)
 	g++ $(FLAGS3) $< -o $@ && ./$@
 
-bks-synchrotron-radiation: %: %.cpp $(SRC)
+bks_synchrotron_radiation: %: %.cpp $(SRC)
 	g++ $(FLAGS3) $< -o $@ && ./$@
 
 clean:
