bks_low_chi test, works

--- a/tests/makefile
+++ b/tests/makefile
@@ -1,5 +1,5 @@
 SRC    := ../src/metropolis.hpp ../src/rng.hpp ../src/histogram.hpp ../src/radiation.hpp ../src/proposal_density.hpp
-BIN    := assert metropolis synchrotron_radiation proposal_density #bks_synchrotron_radiation
+BIN    := assert metropolis synchrotron_radiation proposal_density bks_low_chi
 FLAGS  := -std=c++17 -fconcepts -Wall -Wpedantic -fdiagnostics-color=always -I ../range-v3/include
 FLAGS3 := -O3 -ffast-math $(FLAGS)
 
@@ -19,7 +19,7 @@ synchrotron_radiation: %: %.cpp $(SRC)
 proposal_density: %: %.cpp $(SRC)
 	g++ $(FLAGS3) $< -o $@ && ./$@
 
-bks_synchrotron_radiation: %: %.cpp $(SRC)
+bks_low_chi: %: %.cpp $(SRC)
 	g++ $(FLAGS3) $< -o $@ && ./$@
 
 clean:
