--- a/tests/makefile
+++ b/tests/makefile
@@ -1,5 +1,5 @@
 SRC    := ../src/metropolis.hpp ../src/rng.hpp ../src/histogram.hpp ../src/radiation.hpp ../src/proposal_density.hpp
-BIN    := assert metropolis synchrotron_radiation proposal_density bks_low_chi
+BIN    := assert metropolis synchrotron_radiation proposal_density bks_low_chi bks_high_chi
 FLAGS  := -std=c++17 -fconcepts -Wall -Wpedantic -fdiagnostics-color=always -I ../range-v3/include
 FLAGS3 := -O3 -ffast-math $(FLAGS)
 
@@ -20,6 +20,9 @@ proposal_density: %: %.cpp $(SRC)
 	g++ $(FLAGS3) $< -o $@ && ./$@
 
 bks_low_chi: %: %.cpp $(SRC)
+	g++ $(FLAGS3) $< -o $@ && ./$@
+
+bks_high_chi: %: %.cpp $(SRC)
 	g++ $(FLAGS3) $< -o $@ && ./$@
 
 clean:
