bugfix for bks_synchrotron... in Cherenkov zone; synchrotron_Cherenkov_radiation test; bks_low_chi test fails!

--- a/tests/makefile
+++ b/tests/makefile
@@ -1,5 +1,5 @@
 SRC    := ../src/metropolis.hpp ../src/rng.hpp ../src/histogram.hpp ../src/radiation.hpp ../src/proposal_density.hpp
-BIN    := assert metropolis synchrotron_radiation proposal_density bks_low_chi bks_high_chi
+BIN    := assert metropolis synchrotron_radiation proposal_density bks_low_chi bks_high_chi synchrotron_Cherenkov_radiation
 FLAGS  := -std=c++17 -fconcepts -Wall -Wpedantic -fdiagnostics-color=always -I ../range-v3/include
 FLAGS3 := -O3 -ffast-math $(FLAGS)
 
